# reguladocreader

./: .gitignore  CMakeLists.txt  build.sh
src/: CMakeLists.txt  documentreader.cpp  documentreader.h  documentsender.cpp  documentsender.h  jsonreader.cpp  jsonreader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
utils/: socket_server.py
